--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "raally-web-app",
+  "name": "resource-managment-frontend",
   "version": "1.2.3",
   "private": true,
   "dependencies": {
